# rules_dotnet

./: .bazelrc  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILD  CHANGELOG.rst  CODEOWNERS  CONTRIBUTORS  README.md  README.rst  WORKSPACE  appveyor.yml  azure-pipelines.yml  conf.py  index.rst  packages.json
.bazelci/: presubmit.yml
docs/: ci.rst  multiversion.rst  runtime.rst
docs/examples/mono/: BUILD  WORKSPACE  a.cs  nuget2config.json
dotnet/: BUILD  NUGET_BUILD.tpl  core.rst  csharp.bzl  defs.bzl  deps.bzl  nunit.BUILD  providers.rst  toolchains.rst  workspace.rst
dotnet/platform/: BUILD  list.bzl
dotnet/private/: BUILD  BUILD.net.bazel  BUILD.nuget.bazel  BUILD.sdk.bazel  common.bzl  context.bzl  core_toolchain.bzl  dotnet_toolchain.bzl  net_empty_toolchain.bzl  net_toolchain.bzl  nugets.bzl  providers.bzl  repositories.bzl  sdk.bzl  sdk_core.bzl  sdk_net.bzl
dotnet/private/actions/: assembly.bzl  assembly_common.bzl  assembly_core.bzl  assembly_net.bzl  binary.bzl  binary_core.bzl  binary_net.bzl  com_ref_net.bzl  library.bzl  library_core.bzl  library_net.bzl  resolve.bzl  resx.bzl  resx_core.bzl  resx_net.bzl
dotnet/private/rules/: binary.bzl  binary_core.bzl  binary_net.bzl  com_ref.bzl  common.bzl  gac_net.bzl  import.bzl  import_binary_net.bzl  import_core.bzl  import_net.bzl  launcher_gen.bzl  library.bzl  library_core.bzl  library_net.bzl  libraryset.bzl  nuget.bzl  resource_core.bzl  resx.bzl  resx_net.bzl  runfiles.bzl  stdlib.bzl  stdlib_core.bzl  stdlib_net.bzl  test.bzl  test_core.bzl  test_net.bzl  test_net3.bzl  vs_ref_net.bzl
dotnet/private/skylib/: README.rst
dotnet/private/skylib/lib/: paths.bzl  sets.bzl  versions.bzl
dotnet/stdlib/: BUILD.bazel  generated.bzl
dotnet/stdlib.core/: BUILD.bazel  macro.bzl
dotnet/stdlib.core/v2.1.200/: BUILD.bazel  generated.bzl
dotnet/stdlib.core/v2.1.502/: BUILD.bazel  generated.bzl
dotnet/stdlib.core/v2.1.503/: BUILD.bazel  generated.bzl
dotnet/stdlib.core/v2.2.101/: BUILD.bazel  generated.bzl
dotnet/stdlib.core/v2.2.402/: BUILD.bazel  generated.bzl
dotnet/stdlib.core/v3.0.100/: BUILD.bazel  generated.bzl
dotnet/stdlib.core/v3.1.100/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/: BUILD.bazel  macro.bzl
dotnet/stdlib.net/net45/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net451/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net452/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net46/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net461/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net462/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net47/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net471/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net472/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net48/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/netstandard1.3/: BUILD.bazel
dotnet/toolchain/: BUILD.bazel  toolchains.bzl
dotnet/tools/common/: BUILD  copyfile.c  manifest.c  manifest.h  misc.c
dotnet/tools/copy/: BUILD  main.c
dotnet/tools/empty/: BUILD  main.c
dotnet/tools/genbuild/: BUILD  DllInfo.cs  Program.cs
dotnet/tools/launcher_core/: BUILD  main.c
dotnet/tools/launcher_core_xunit/: BUILD  main.c
dotnet/tools/launcher_mono/: BUILD  main.c
dotnet/tools/launcher_mono_nunit/: BUILD  main.c
dotnet/tools/launcher_mono_xunit/: BUILD  (+1 more)
examples/example_binary/: BUILD
examples/example_lib/: BUILD  hello.txt
examples/example_nuget/: BUILD  Program.cs
examples/example_test/: BUILD
examples/example_tool/: BUILD  MyTool.cs
examples/example_transitive_lib/: BUILD
tests/: BUILD.bazel  README.rst  bazel_tests.bzl
tests/core/: README.rst
tests/core/core_binary/: BUILD.bazel  README.rst
tests/core/core_library/: BUILD.bazel  README.rst  main.cs  main_test.cs
tests/core/dotnet_binary/: BUILD.bazel  README.rst  main_test.cs
tests/core/dotnet_library/: BUILD.bazel  README.rst  main.cs  main_test.cs
tests/core/download_sdk/: BUILD.bazel  main.cs
tests/core/nuget_single/: BUILD.bazel  BUILD.in  MyTest.cs.in  README.rst  WORKSPACE.in  build.in.bzl  nuget_single.cs  workspace.in.bzl
tests/core/roslyn_2_10_0/: BUILD.bazel  README.rst  WORKSPACE.in  workspace.in.bzl
tests/core/roslyn_2_6_0/: BUILD.bazel  WORKSPACE.in  workspace.in.bzl
tests/core/roslyn_2_6_1/: BUILD.bazel  BUILD.in  MyTest.cs.in  WORKSPACE.in  roslyn.cs  workspace.in.bzl
tests/core/roslyn_2_7_0/: BUILD.bazel  WORKSPACE.in  roslyn.cs  workspace.in.bzl
tests/core/roslyn_2_8_0/: BUILD.bazel  WORKSPACE.in  workspace.in.bzl
tests/core/roslyn_2_8_2/: BUILD.bazel  WORKSPACE.in  build.in.bzl  workspace.in.bzl
tests/core/roslyn_2_9_0/: BUILD.bazel  BUILD.in  WORKSPACE.in  workspace.in.bzl
tests/examples/: README.rst
tests/examples/aspnetcore/: BUILD
tests/examples/example_binary/: BUILD  Program.cs  ShellComExample.cs
tests/examples/example_lib/: BUILD  MyClass.cs
tests/examples/example_resx/: BUILD  Resources.Designer.cs  Resources.resx  ResxTest.cs  example_resx.csproj
tests/examples/example_test/: BUILD  MyTest.cs
tests/examples/example_tool/: BUILD  MyTool.cs
tests/examples/example_transitive_lib/: BUILD  TransitiveClass.cs
tests/examples/example_xunit/: BUILD  MyTest.cs
tests/examples/netstandard/: BUILD  Lib.cs  XUnitTest.cs
tests/testlib/: BUILD  BazelTestBase.cs  ProcessAsyncHelper.cs
tests/tools/nuget2bazel/: BUILD  PreReleaseT.cs  RemotionLinqT.cs  SyncT.cs  WorkspaceParserT.cs  WorkspaceWriterT.cs  nuget2bazel-test.csproj
tools/converttests/: BUILD
tools/nuget2bazel/: AddCommand.cs  AddVerb.cs  BUILD  BaseVerb.cs  BazelSolutionManager.cs  DeleteCommand.cs  DeleteOnRestart.cs  DeleteVerb.cs  Logger.cs  MachineWideSettings.cs  Nuget2BazelConfig.cs  Program.cs  ProjectBazel.cs  ProjectBazelConfig.cs  ProjectBazelManipulator.cs  ProjectContext.cs  README.rst  SdkList.cs  SyncCommand.cs  SyncVerb.cs  TempDirCollection.cs  UpdateCommand.cs  UpdateVerb.cs  WorkspaceEntry.cs  WorkspaceParser.cs  WorkspaceWriter.cs  init.cmd  nuget2bazel.csproj  nuget2bazel.sln
tools/simpleresgen/: BUILD  Program.cs  Translator.cs  simpleresgen.csproj
(+50 files in other folders)
