# Consuming the above md5_sum rule directly into the data deps of a sh_test results in the
# files just not appearing, and the dependancy not triggering.
# If we wrap it in a filegroup first however it just works.
filegroup(
    name = "rules_dotnet_deps",
    srcs = ["//dotnet:all_rules"],
    visibility = ["//visibility:public"],
)
