package(default_visibility = ["//visibility:public"])

filegroup(
    name = "mcs_bin",
    srcs = glob([
        "mcs_bin/*",
    ]),
)

filegroup(
    name = "mono_bin",
    srcs = glob([
        "mono_bin/*",
    ]),
)

filegroup(
    name = "lib",
    srcs = glob([
        "lib/**/*",
    ]),
)

filegroup(
    name = "shared",
    srcs = glob([
        "shared/**/*",
    ]),
)

filegroup(
    name = "tools",
    srcs = glob([
        "tools/**/*",
    ]),
)

filegroup(
    name = "native_deps",
    srcs = [],
)

