package(default_visibility = [ "//visibility:public" ])

load("@io_bazel_rules_dotnet//dotnet/private:rules/stdlib_core.bzl", "core_stdlib")


core_stdlib(name="Microsoft.CSharp.dll")
core_stdlib(name="Microsoft.VisualBasic.dll")
core_stdlib(name="Microsoft.Win32.Primitives.dll")
core_stdlib(name="Microsoft.Win32.Registry.dll")
core_stdlib(name="SOS.NETCore.dll")
core_stdlib(name="System.AppContext.dll")
core_stdlib(name="System.Buffers.dll")
core_stdlib(name="System.Collections.Concurrent.dll")
core_stdlib(name="System.Collections.Immutable.dll")
core_stdlib(name="System.Collections.NonGeneric.dll")
core_stdlib(name="System.Collections.Specialized.dll")
core_stdlib(name="System.Collections.dll")
core_stdlib(name="System.ComponentModel.Annotations.dll")
core_stdlib(name="System.ComponentModel.Composition.dll")
core_stdlib(name="System.ComponentModel.DataAnnotations.dll")
core_stdlib(name="System.ComponentModel.EventBasedAsync.dll")
core_stdlib(name="System.ComponentModel.Primitives.dll")
core_stdlib(name="System.ComponentModel.TypeConverter.dll")
core_stdlib(name="System.ComponentModel.dll")
core_stdlib(name="System.Configuration.dll")
core_stdlib(name="System.Console.dll")
core_stdlib(name="System.Core.dll")
core_stdlib(name="System.Data.Common.dll")
core_stdlib(name="System.Data.dll")
core_stdlib(name="System.Diagnostics.Contracts.dll")
core_stdlib(name="System.Diagnostics.Debug.dll")
core_stdlib(name="System.Diagnostics.DiagnosticSource.dll")
core_stdlib(name="System.Diagnostics.FileVersionInfo.dll")
core_stdlib(name="System.Diagnostics.Process.dll")
core_stdlib(name="System.Diagnostics.StackTrace.dll")
core_stdlib(name="System.Diagnostics.TextWriterTraceListener.dll")
core_stdlib(name="System.Diagnostics.Tools.dll")
core_stdlib(name="System.Diagnostics.TraceSource.dll")
core_stdlib(name="System.Diagnostics.Tracing.dll")
core_stdlib(name="System.Drawing.Primitives.dll")
core_stdlib(name="System.Drawing.dll")
core_stdlib(name="System.Dynamic.Runtime.dll")
core_stdlib(name="System.Globalization.Calendars.dll")
core_stdlib(name="System.Globalization.Extensions.dll")
core_stdlib(name="System.Globalization.dll")
core_stdlib(name="System.IO.Compression.FileSystem.dll")
core_stdlib(name="System.IO.Compression.ZipFile.dll")
core_stdlib(name="System.IO.Compression.dll")
core_stdlib(name="System.IO.FileSystem.AccessControl.dll")
core_stdlib(name="System.IO.FileSystem.DriveInfo.dll")
core_stdlib(name="System.IO.FileSystem.Primitives.dll")
core_stdlib(name="System.IO.FileSystem.Watcher.dll")
core_stdlib(name="System.IO.FileSystem.dll")
core_stdlib(name="System.IO.IsolatedStorage.dll")
core_stdlib(name="System.IO.MemoryMappedFiles.dll")
core_stdlib(name="System.IO.Pipes.dll")
core_stdlib(name="System.IO.UnmanagedMemoryStream.dll")
core_stdlib(name="System.IO.dll")
core_stdlib(name="System.Linq.Expressions.dll")
core_stdlib(name="System.Linq.Parallel.dll")
core_stdlib(name="System.Linq.Queryable.dll")
core_stdlib(name="System.Linq.dll")
core_stdlib(name="System.Net.Http.dll")
core_stdlib(name="System.Net.HttpListener.dll")
core_stdlib(name="System.Net.Mail.dll")
core_stdlib(name="System.Net.NameResolution.dll")
core_stdlib(name="System.Net.NetworkInformation.dll")
core_stdlib(name="System.Net.Ping.dll")
core_stdlib(name="System.Net.Primitives.dll")
core_stdlib(name="System.Net.Requests.dll")
core_stdlib(name="System.Net.Security.dll")
core_stdlib(name="System.Net.ServicePoint.dll")
core_stdlib(name="System.Net.Sockets.dll")
core_stdlib(name="System.Net.WebClient.dll")
core_stdlib(name="System.Net.WebHeaderCollection.dll")
core_stdlib(name="System.Net.WebProxy.dll")
core_stdlib(name="System.Net.WebSockets.Client.dll")
core_stdlib(name="System.Net.WebSockets.dll")
core_stdlib(name="System.Net.dll")
core_stdlib(name="System.Numerics.Vectors.dll")
core_stdlib(name="System.Numerics.dll")
core_stdlib(name="System.ObjectModel.dll")
core_stdlib(name="System.Private.CoreLib.dll")
core_stdlib(name="System.Private.DataContractSerialization.dll")
core_stdlib(name="System.Private.Uri.dll")
core_stdlib(name="System.Private.Xml.Linq.dll")
core_stdlib(name="System.Private.Xml.dll")
core_stdlib(name="System.Reflection.DispatchProxy.dll")
core_stdlib(name="System.Reflection.Emit.ILGeneration.dll")
core_stdlib(name="System.Reflection.Emit.Lightweight.dll")
core_stdlib(name="System.Reflection.Emit.dll")
core_stdlib(name="System.Reflection.Extensions.dll")
core_stdlib(name="System.Reflection.Metadata.dll")
core_stdlib(name="System.Reflection.Primitives.dll")
core_stdlib(name="System.Reflection.TypeExtensions.dll")
core_stdlib(name="System.Reflection.dll")
core_stdlib(name="System.Resources.Reader.dll")
core_stdlib(name="System.Resources.ResourceManager.dll")
core_stdlib(name="System.Resources.Writer.dll")
core_stdlib(name="System.Runtime.CompilerServices.VisualC.dll")
core_stdlib(name="System.Runtime.Extensions.dll")
core_stdlib(name="System.Runtime.Handles.dll")
core_stdlib(name="System.Runtime.InteropServices.RuntimeInformation.dll")
core_stdlib(name="System.Runtime.InteropServices.WindowsRuntime.dll")
core_stdlib(name="System.Runtime.InteropServices.dll")
core_stdlib(name="System.Runtime.Loader.dll")
core_stdlib(name="System.Runtime.Numerics.dll")
core_stdlib(name="System.Runtime.Serialization.Formatters.dll")
core_stdlib(name="System.Runtime.Serialization.Json.dll")
core_stdlib(name="System.Runtime.Serialization.Primitives.dll")
core_stdlib(name="System.Runtime.Serialization.Xml.dll")
core_stdlib(name="System.Runtime.Serialization.dll")
core_stdlib(name="System.Runtime.dll")
core_stdlib(name="System.Security.AccessControl.dll")
core_stdlib(name="System.Security.Claims.dll")
core_stdlib(name="System.Security.Cryptography.Algorithms.dll")
core_stdlib(name="System.Security.Cryptography.Cng.dll")
core_stdlib(name="System.Security.Cryptography.Csp.dll")
core_stdlib(name="System.Security.Cryptography.Encoding.dll")
core_stdlib(name="System.Security.Cryptography.OpenSsl.dll")
core_stdlib(name="System.Security.Cryptography.Primitives.dll")
core_stdlib(name="System.Security.Cryptography.X509Certificates.dll")
core_stdlib(name="System.Security.Principal.Windows.dll")
core_stdlib(name="System.Security.Principal.dll")
core_stdlib(name="System.Security.SecureString.dll")
core_stdlib(name="System.Security.dll")
core_stdlib(name="System.ServiceModel.Web.dll")
core_stdlib(name="System.ServiceProcess.dll")
core_stdlib(name="System.Text.Encoding.Extensions.dll")
core_stdlib(name="System.Text.Encoding.dll")
core_stdlib(name="System.Text.RegularExpressions.dll")
core_stdlib(name="System.Threading.Overlapped.dll")
core_stdlib(name="System.Threading.Tasks.Dataflow.dll")
core_stdlib(name="System.Threading.Tasks.Extensions.dll")
core_stdlib(name="System.Threading.Tasks.Parallel.dll")
core_stdlib(name="System.Threading.Tasks.dll")
core_stdlib(name="System.Threading.Thread.dll")
core_stdlib(name="System.Threading.ThreadPool.dll")
core_stdlib(name="System.Threading.Timer.dll")
core_stdlib(name="System.Threading.dll")
core_stdlib(name="System.Transactions.Local.dll")
core_stdlib(name="System.Transactions.dll")
core_stdlib(name="System.ValueTuple.dll")
core_stdlib(name="System.Web.HttpUtility.dll")
core_stdlib(name="System.Web.dll")
core_stdlib(name="System.Windows.dll")
core_stdlib(name="System.Xml.Linq.dll")
core_stdlib(name="System.Xml.ReaderWriter.dll")
core_stdlib(name="System.Xml.Serialization.dll")
core_stdlib(name="System.Xml.XDocument.dll")
core_stdlib(name="System.Xml.XPath.XDocument.dll")
core_stdlib(name="System.Xml.XPath.dll")
core_stdlib(name="System.Xml.XmlDocument.dll")
core_stdlib(name="System.Xml.XmlSerializer.dll")
core_stdlib(name="System.Xml.dll")
core_stdlib(name="System.dll")
core_stdlib(name="WindowsBase.dll")
core_stdlib(name="mscorlib.dll")
core_stdlib(name="netstandard.dll")
